# rip-sim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  data.txt  esn_BH.py  esn_BH_lms.py  esn_LMS.py  esn_PC.py  esn_RLS.py  main.cpp  reservoirpy_online.py  setup.cfg
.github/workflows/: dhrystone.yaml  main.yaml  python-wrapper.yaml  riscv-tests.yaml  trace.yaml
dhrystone/: CMakeLists.txt  DecoderTest.cpp  DhrystoneTest.cpp
include/: AsmParser.h  BinaryEmitter.h  CSR.h  CommonTypes.h  Debug.h  Decoder.h  Exceptions.h  InstructionTypes.h  Instructions.h  Memory.h  Registers.h  Statistics.h  Stats.h
include/Assembler/: AsmParser.h  BinaryEmitter.h
include/RIPSimulator/: BranchPredictor.h  Interactive.h  Memory.h  Options.h  PipelineQue.h  PipelineStates.h  RIPSimulator.h
include/Simulator/: CPU.h  CustomRegisters.h  Decoder.h  Memory.h  Simulator.h
lib/: AsmParser.cpp  BinaryEmitter.cpp  CMakeLists.txt  CSR.cpp  Debug.cpp  Decoder.cpp  Exceptions.cpp  Instructions.cpp  Memory.cpp
lib/Assembler/: AsmParser.cpp  BinaryEmitter.cpp
lib/RIPSimulator/: Interactive.cpp  PipelineStates.cpp  RIPSimulator.cpp
lib/Simulator/: Simulator.cpp
python-wrapper/: online_reservoir_branch_predictor_lms.py  online_reservoir_branch_predictor_rls.py
python-wrapper/reservoir_branch_predictor/: esn_lms.py  esn_online.py  esn_rls.py
python-wrapper/rip_simulator/: rip_simulator.py
python-wrapper/tests/: interactive_branch_predictor_test.py  online_reservoir_bp.py  online_reservoir_branch_predictor_test.py  rip_simulator_test.py
reservoir/batch/: esn_BH.py  esn_PC.py  esn_PCBH.py  esn_batch.py
reservoir/online/: esn_LMS.py  esn_RLS.py  reservoirpy_online.py
rip-dhrystone/: CMakeLists.txt  RIPDhrystoneTest.cpp
rip-riscvtests/: CMakeLists.txt  RIPRiscvTests.cpp
rip-tests/: dhry-baremetal.bin.rip  dhry-baremetal.dump  dhry-baremetal.dump.rip  dhry-baremetal.hex  dhry-baremetal.hex.rip  dhry-baremetal_run100_v0_0_5.bin.rip  dhry-baremetal_run100_v0_0_5.dump.rip  dhry.bin.rip  dhry.dump  dhry.dump.rip  dhry.hex  dhry.hex.rip  dhry_run100_v0.0.4.dump.rip  dhry_run100_v0_0_5.bin.rip  dhry_run100_v0_0_5.hex.rip  main.bin.rip  main.dump.rip  main.hex.rip  main_v0.0.4.bin.rip  main_v0_0_5.dump.rip  main_v0_0_5.hex.rip  rv32ui-p-add.dump  rv32ui-p-add_v0_0_5.bin.rip  rv32ui-p-addi.dump  rv32ui-p-addi_v0_0_5.bin.rip  rv32ui-p-addi_v0_0_5.dump  rv32ui-p-and.dump  rv32ui-p-and_v0.0.4.bin.rip  rv32ui-p-and_v0_0_5.dump  rv32ui-p-andi.dump  rv32ui-p-andi_v0_0_5.bin.rip  rv32ui-p-auipc.dump  rv32ui-p-auipc_v0_0_5.bin.rip  rv32ui-p-beq.dump  rv32ui-p-beq_v0.0.4.bin.rip  rv32ui-p-beq_v0_0_5.dump  rv32ui-p-bge.dump  rv32ui-p-bge_v0.0.4.bin.rip  rv32ui-p-bge_v0.0.4.dump  rv32ui-p-bgeu.dump  (+351 more)
riscvtests/: CMakeLists.txt  RiscvTests.cpp
rvemu-test/: Cargo.toml
rvemu-test/src/: main.rs
tests/: Makefile  addi.s  fib.s  fib.s.tmp  ori.s
tests/asm/: Makefile  fib0.s.tmp  rv32i.s
tests/sim/: dhry  dhry-no-header.hex  dhry.dump  dhry.hex  dhry.map  rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-ma_data  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-sra  rv32ui-p-srai  rv32ui-p-srl  (+13 more)
tests/sim/riscv-tests/benchmarks/: dhrystone.riscv  dhrystone.riscv.dump  median.riscv  median.riscv.dump  memcpy.riscv  memcpy.riscv.dump  mm.riscv  mm.riscv.dump  mt-matmul.riscv  mt-matmul.riscv.dump  mt-memcpy.riscv  mt-memcpy.riscv.dump  mt-vvadd.riscv  mt-vvadd.riscv.dump  multiply.riscv  multiply.riscv.dump  pmp.riscv  pmp.riscv.dump  qsort.riscv  qsort.riscv.dump  rsort.riscv  rsort.riscv.dump  spmv.riscv  spmv.riscv.dump  towers.riscv  towers.riscv.dump  vec-daxpy.riscv  vec-daxpy.riscv.dump  vec-memcpy.riscv  vec-memcpy.riscv.dump  vec-sgemm.riscv  vec-sgemm.riscv.dump  vec-strcmp.riscv  vec-strcmp.riscv.dump  vvadd.riscv  vvadd.riscv.dump
tools/: CMakeLists.txt
tools/asmkheiv/: CMakeLists.txt  asmkheiv.cpp
tools/rip-sim/: CMakeLists.txt  rip-sim.cpp
tools/simkheiv/: CMakeLists.txt  simkheiv.cpp
unittests/: BinaryEmitterTest.cpp  CMakeLists.txt  DecoderTest.cpp  ParserTest.cpp  SimulatorTest.cpp
unittests/Assembler/: CMakeLists.txt  ParserTest.cpp
unittests/RIPSimulator/: BranchPredictorTest.cpp  CMakeLists.txt  ForwardingTest.cpp  RIPSimulatorTest.cpp
unittests/Simulator/: CMakeLists.txt  DecoderTest.cpp  DhrystoneTest.cpp  RiscvTests.cpp  SimulatorTest.cpp
unittests/Simulator/rip-tests/: rv32ui-p-blt.dump  rv32ui-p-jal.dump  rv32ui-p-lb.dump  rv32ui-p-ori.dump  rv32ui-p-simple.dump  rv32ui-p-sltu.dump  rv32ui-p-srli.dump  rv32ui-p-xor.dump  rv32ui-v-bgeu.hex  rv32ui-v-blt.hex  rv32ui-v-jal.dump  rv32ui-v-lhu.dump  rv32ui-v-lw.hex  rv32ui-v-ma_data.dump  rv32ui-v-ma_data.hex  rv32ui-v-ori.hex  rv32ui-v-sh.hex  rv32ui-v-simple.hex  rv32ui-v-srl.hex  rv32ui-v-srli.hex  rv32ui-v-sw.dump  rv32um-p-mul.dump  rv32um-p-mulhsu.dump  rv32um-p-rem.dump  rv32um-v-rem.hex
