[metadata]
name = rip-simulator
version = 0.0.1b
author = Kohei Asano
author_email = kk.asano.luxy@gmail.com
description = RIP simulator python wrapper
license = Apache License 2.0
url = https://github.com/Reservoir-In-Processor/rip-sim

classifiers =
    Programming Language :: Python :: 3

[options]
packages=find:
python_requires = >= 3.10
include_package_data = True

[options.packages.find]
where=python-wrapper
